# webapp-dev-trial

./: .gitignore  CLAUDE.md  QUANT_PLATFORM_PRD.md  README.md
docs/: .bkit-memory.json  .pdca-status.json
docs/.pdca-snapshots/: snapshot-1772163280847.json  snapshot-1772164810403.json  snapshot-1772167076563.json  snapshot-1772171385961.json  snapshot-1772173683381.json  snapshot-1772175277090.json
docs/01-plan/features/: mdd-improvement.plan.md
docs/03-analysis/: mdd-improvement.analysis.md  ui-fix.analysis.md
docs/04-report/: changelog.md  project-status.md  quant_project.report.md
docs/04-report/features/: ui-fix.report.md  (+1 more)
quant_project/: .gitignore  PROJECT_OVERVIEW.md  config.py  main.py  phase_status.json  pyproject.toml  resume_note.md  review_log.md  test.ipynb
quant_project/.streamlit/: config.toml
quant_project/backend/: main.py
quant_project/backend/routers/: advisor.py  analysis.py  backtest.py  fundamentals.py  portfolio.py  sentiment.py
quant_project/data/constituents/: sp500_tickers.csv
quant_project/frontend/: app.py
quant_project/frontend/pages/: 1_fundamental_filter.py  2_backtest.py  3_portfolio_monitor.py  4_sentiment.py  5_analysis_report.py  6_strategy_advisor.py
quant_project/models/: model_registry.json
quant_project/models/results/: baseline_summary.json
quant_project/scripts/: build_factors.py  fetch_constituents.py  fetch_macro.py  fetch_ohlcv.py  generate_signals.py  run_backtest.py  train_model.py
quant_project/services/: ai_advisor.py  analysis_plugin.py  data_provider.py  sentiment_service.py  storage.py
(+9 files in other folders)
